CompiladorDLP/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : elementos

   2  elementos :
   3            | elementos elemento

   4  elemento : funcion
   5           | struct
   6           | atributo

   7  funcion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' atributos sentencias '}'
   8          | "IDENT" '(' parametrosOpt ')' '{' atributos sentencias '}'

   9  atributos :
  10            | atributos atributo

  11  parametrosOpt : parametros
  12                |

  13  parametros : "IDENT" ':' tipo
  14             | parametros ',' "IDENT" ':' tipo

  15  tipo : "IDENT"
  16       | "INT"
  17       | "REAL"
  18       | "CHAR"
  19       | "VOID"
  20       | '[' "LITERALINT" ']' tipo

  21  struct : "STRUCT" "IDENT" '{' definiciones '}' ';'

  22  atributo : "VAR" definicion

  23  definiciones :
  24               | definiciones definicion

  25  definicion : "IDENT" ':' tipo ';'

  26  sentencias : sentencias sentencia
  27             |

  28  sentencia : "READ" expresion ';'
  29            | "PRINT" expresion ';'
  30            | "WHILE" '(' expresion ')' '{' sentencias '}'
  31            | "IF" '(' expresion ')' '{' sentencias '}'
  32            | "IF" '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'
  33            | expresion '=' expresion ';'
  34            | "RETURN" expresion ';'
  35            | "RETURN" ';'
  36            | "IDENT" '(' valoresOpt ')' ';'

  37  expresion : "LITERALINT"
  38            | "LITERALREAL"
  39            | "LITERALCHAR"
  40            | "IDENT"
  41            | expresion '+' expresion
  42            | expresion '-' expresion
  43            | expresion '/' expresion
  44            | expresion '*' expresion
  45            | expresion '<' expresion
  46            | expresion '>' expresion
  47            | expresion "MENORIGUAL" expresion
  48            | expresion "MAYORIGUAL" expresion
  49            | expresion "IGUAL" expresion
  50            | expresion "DISTINTO" expresion
  51            | expresion "AND" expresion
  52            | expresion "OR" expresion
  53            | '!' expresion
  54            | "CAST" '<' tipo '>' '(' expresion ')'
  55            | '(' expresion ')'
  56            | expresion '[' expresion ']'
  57            | expresion '.' "IDENT"
  58            | "IDENT" '(' valoresOpt ')'

  59  valoresOpt : valores
  60             |

  61  valores : expresion
  62          | valores ',' expresion

state 0
	$accept : . programa $end  (0)
	elementos : .  (2)

	.  reduce 2

	programa  goto 1
	elementos  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : elementos .  (1)
	elementos : elementos . elemento  (3)

	"IDENT"  shift 3
	"STRUCT"  shift 4
	"VAR"  shift 5
	$end  reduce 1

	elemento  goto 6
	funcion  goto 7
	struct  goto 8
	atributo  goto 9


state 3
	funcion : "IDENT" . '(' parametrosOpt ')' ':' tipo '{' atributos sentencias '}'  (7)
	funcion : "IDENT" . '(' parametrosOpt ')' '{' atributos sentencias '}'  (8)

	'('  shift 10
	.  error


state 4
	struct : "STRUCT" . "IDENT" '{' definiciones '}' ';'  (21)

	"IDENT"  shift 11
	.  error


state 5
	atributo : "VAR" . definicion  (22)

	"IDENT"  shift 12
	.  error

	definicion  goto 13


state 6
	elementos : elementos elemento .  (3)

	.  reduce 3


state 7
	elemento : funcion .  (4)

	.  reduce 4


state 8
	elemento : struct .  (5)

	.  reduce 5


state 9
	elemento : atributo .  (6)

	.  reduce 6


state 10
	funcion : "IDENT" '(' . parametrosOpt ')' ':' tipo '{' atributos sentencias '}'  (7)
	funcion : "IDENT" '(' . parametrosOpt ')' '{' atributos sentencias '}'  (8)
	parametrosOpt : .  (12)

	"IDENT"  shift 14
	')'  reduce 12

	parametrosOpt  goto 15
	parametros  goto 16


state 11
	struct : "STRUCT" "IDENT" . '{' definiciones '}' ';'  (21)

	'{'  shift 17
	.  error


state 12
	definicion : "IDENT" . ':' tipo ';'  (25)

	':'  shift 18
	.  error


state 13
	atributo : "VAR" definicion .  (22)

	.  reduce 22


state 14
	parametros : "IDENT" . ':' tipo  (13)

	':'  shift 19
	.  error


state 15
	funcion : "IDENT" '(' parametrosOpt . ')' ':' tipo '{' atributos sentencias '}'  (7)
	funcion : "IDENT" '(' parametrosOpt . ')' '{' atributos sentencias '}'  (8)

	')'  shift 20
	.  error


state 16
	parametrosOpt : parametros .  (11)
	parametros : parametros . ',' "IDENT" ':' tipo  (14)

	','  shift 21
	')'  reduce 11


state 17
	struct : "STRUCT" "IDENT" '{' . definiciones '}' ';'  (21)
	definiciones : .  (23)

	.  reduce 23

	definiciones  goto 22


state 18
	definicion : "IDENT" ':' . tipo ';'  (25)

	'['  shift 23
	"IDENT"  shift 24
	"INT"  shift 25
	"REAL"  shift 26
	"CHAR"  shift 27
	"VOID"  shift 28
	.  error

	tipo  goto 29


state 19
	parametros : "IDENT" ':' . tipo  (13)

	'['  shift 23
	"IDENT"  shift 24
	"INT"  shift 25
	"REAL"  shift 26
	"CHAR"  shift 27
	"VOID"  shift 28
	.  error

	tipo  goto 30


state 20
	funcion : "IDENT" '(' parametrosOpt ')' . ':' tipo '{' atributos sentencias '}'  (7)
	funcion : "IDENT" '(' parametrosOpt ')' . '{' atributos sentencias '}'  (8)

	':'  shift 31
	'{'  shift 32
	.  error


state 21
	parametros : parametros ',' . "IDENT" ':' tipo  (14)

	"IDENT"  shift 33
	.  error


state 22
	struct : "STRUCT" "IDENT" '{' definiciones . '}' ';'  (21)
	definiciones : definiciones . definicion  (24)

	"IDENT"  shift 12
	'}'  shift 34
	.  error

	definicion  goto 35


state 23
	tipo : '[' . "LITERALINT" ']' tipo  (20)

	"LITERALINT"  shift 36
	.  error


state 24
	tipo : "IDENT" .  (15)

	.  reduce 15


state 25
	tipo : "INT" .  (16)

	.  reduce 16


state 26
	tipo : "REAL" .  (17)

	.  reduce 17


state 27
	tipo : "CHAR" .  (18)

	.  reduce 18


state 28
	tipo : "VOID" .  (19)

	.  reduce 19


state 29
	definicion : "IDENT" ':' tipo . ';'  (25)

	';'  shift 37
	.  error


state 30
	parametros : "IDENT" ':' tipo .  (13)

	.  reduce 13


state 31
	funcion : "IDENT" '(' parametrosOpt ')' ':' . tipo '{' atributos sentencias '}'  (7)

	'['  shift 23
	"IDENT"  shift 24
	"INT"  shift 25
	"REAL"  shift 26
	"CHAR"  shift 27
	"VOID"  shift 28
	.  error

	tipo  goto 38


state 32
	funcion : "IDENT" '(' parametrosOpt ')' '{' . atributos sentencias '}'  (8)
	atributos : .  (9)

	.  reduce 9

	atributos  goto 39


state 33
	parametros : parametros ',' "IDENT" . ':' tipo  (14)

	':'  shift 40
	.  error


state 34
	struct : "STRUCT" "IDENT" '{' definiciones '}' . ';'  (21)

	';'  shift 41
	.  error


state 35
	definiciones : definiciones definicion .  (24)

	.  reduce 24


state 36
	tipo : '[' "LITERALINT" . ']' tipo  (20)

	']'  shift 42
	.  error


state 37
	definicion : "IDENT" ':' tipo ';' .  (25)

	.  reduce 25


state 38
	funcion : "IDENT" '(' parametrosOpt ')' ':' tipo . '{' atributos sentencias '}'  (7)

	'{'  shift 43
	.  error


state 39
	funcion : "IDENT" '(' parametrosOpt ')' '{' atributos . sentencias '}'  (8)
	atributos : atributos . atributo  (10)
	sentencias : .  (27)

	"VAR"  shift 5
	'!'  reduce 27
	"IDENT"  reduce 27
	'('  reduce 27
	'}'  reduce 27
	"LITERALINT"  reduce 27
	"READ"  reduce 27
	"PRINT"  reduce 27
	"WHILE"  reduce 27
	"IF"  reduce 27
	"RETURN"  reduce 27
	"LITERALREAL"  reduce 27
	"LITERALCHAR"  reduce 27
	"CAST"  reduce 27

	atributo  goto 44
	sentencias  goto 45


state 40
	parametros : parametros ',' "IDENT" ':' . tipo  (14)

	'['  shift 23
	"IDENT"  shift 24
	"INT"  shift 25
	"REAL"  shift 26
	"CHAR"  shift 27
	"VOID"  shift 28
	.  error

	tipo  goto 46


state 41
	struct : "STRUCT" "IDENT" '{' definiciones '}' ';' .  (21)

	.  reduce 21


state 42
	tipo : '[' "LITERALINT" ']' . tipo  (20)

	'['  shift 23
	"IDENT"  shift 24
	"INT"  shift 25
	"REAL"  shift 26
	"CHAR"  shift 27
	"VOID"  shift 28
	.  error

	tipo  goto 47


state 43
	funcion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' . atributos sentencias '}'  (7)
	atributos : .  (9)

	.  reduce 9

	atributos  goto 48


state 44
	atributos : atributos atributo .  (10)

	.  reduce 10


state 45
	funcion : "IDENT" '(' parametrosOpt ')' '{' atributos sentencias . '}'  (8)
	sentencias : sentencias . sentencia  (26)

	'!'  shift 49
	"IDENT"  shift 50
	'('  shift 51
	'}'  shift 52
	"LITERALINT"  shift 53
	"READ"  shift 54
	"PRINT"  shift 55
	"WHILE"  shift 56
	"IF"  shift 57
	"RETURN"  shift 58
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	sentencia  goto 62
	expresion  goto 63


state 46
	parametros : parametros ',' "IDENT" ':' tipo .  (14)

	.  reduce 14


state 47
	tipo : '[' "LITERALINT" ']' tipo .  (20)

	.  reduce 20


state 48
	funcion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' atributos . sentencias '}'  (7)
	atributos : atributos . atributo  (10)
	sentencias : .  (27)

	"VAR"  shift 5
	'!'  reduce 27
	"IDENT"  reduce 27
	'('  reduce 27
	'}'  reduce 27
	"LITERALINT"  reduce 27
	"READ"  reduce 27
	"PRINT"  reduce 27
	"WHILE"  reduce 27
	"IF"  reduce 27
	"RETURN"  reduce 27
	"LITERALREAL"  reduce 27
	"LITERALCHAR"  reduce 27
	"CAST"  reduce 27

	atributo  goto 44
	sentencias  goto 64


state 49
	expresion : '!' . expresion  (53)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 66


state 50
	sentencia : "IDENT" . '(' valoresOpt ')' ';'  (36)
	expresion : "IDENT" .  (40)
	expresion : "IDENT" . '(' valoresOpt ')'  (58)

	'('  shift 67
	'+'  reduce 40
	'-'  reduce 40
	'*'  reduce 40
	'/'  reduce 40
	'<'  reduce 40
	'>'  reduce 40
	'['  reduce 40
	'.'  reduce 40
	"MENORIGUAL"  reduce 40
	"MAYORIGUAL"  reduce 40
	"IGUAL"  reduce 40
	"DISTINTO"  reduce 40
	"AND"  reduce 40
	"OR"  reduce 40
	'='  reduce 40


state 51
	expresion : '(' . expresion ')'  (55)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 68


state 52
	funcion : "IDENT" '(' parametrosOpt ')' '{' atributos sentencias '}' .  (8)

	.  reduce 8


state 53
	expresion : "LITERALINT" .  (37)

	.  reduce 37


state 54
	sentencia : "READ" . expresion ';'  (28)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 69


state 55
	sentencia : "PRINT" . expresion ';'  (29)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 70


state 56
	sentencia : "WHILE" . '(' expresion ')' '{' sentencias '}'  (30)

	'('  shift 71
	.  error


state 57
	sentencia : "IF" . '(' expresion ')' '{' sentencias '}'  (31)
	sentencia : "IF" . '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (32)

	'('  shift 72
	.  error


state 58
	sentencia : "RETURN" . expresion ';'  (34)
	sentencia : "RETURN" . ';'  (35)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	';'  shift 73
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 74


state 59
	expresion : "LITERALREAL" .  (38)

	.  reduce 38


state 60
	expresion : "LITERALCHAR" .  (39)

	.  reduce 39


state 61
	expresion : "CAST" . '<' tipo '>' '(' expresion ')'  (54)

	'<'  shift 75
	.  error


state 62
	sentencias : sentencias sentencia .  (26)

	.  reduce 26


state 63
	sentencia : expresion . '=' expresion ';'  (33)
	expresion : expresion . '+' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '/' expresion  (43)
	expresion : expresion . '*' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . '>' expresion  (46)
	expresion : expresion . "MENORIGUAL" expresion  (47)
	expresion : expresion . "MAYORIGUAL" expresion  (48)
	expresion : expresion . "IGUAL" expresion  (49)
	expresion : expresion . "DISTINTO" expresion  (50)
	expresion : expresion . "AND" expresion  (51)
	expresion : expresion . "OR" expresion  (52)
	expresion : expresion . '[' expresion ']'  (56)
	expresion : expresion . '.' "IDENT"  (57)

	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'<'  shift 80
	'>'  shift 81
	'['  shift 82
	'.'  shift 83
	"MENORIGUAL"  shift 84
	"MAYORIGUAL"  shift 85
	"IGUAL"  shift 86
	"DISTINTO"  shift 87
	"AND"  shift 88
	"OR"  shift 89
	'='  shift 90
	.  error


state 64
	funcion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' atributos sentencias . '}'  (7)
	sentencias : sentencias . sentencia  (26)

	'!'  shift 49
	"IDENT"  shift 50
	'('  shift 51
	'}'  shift 91
	"LITERALINT"  shift 53
	"READ"  shift 54
	"PRINT"  shift 55
	"WHILE"  shift 56
	"IF"  shift 57
	"RETURN"  shift 58
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	sentencia  goto 62
	expresion  goto 63


state 65
	expresion : "IDENT" .  (40)
	expresion : "IDENT" . '(' valoresOpt ')'  (58)

	'('  shift 92
	'+'  reduce 40
	'-'  reduce 40
	'*'  reduce 40
	'/'  reduce 40
	','  reduce 40
	'<'  reduce 40
	'>'  reduce 40
	'['  reduce 40
	'.'  reduce 40
	"MENORIGUAL"  reduce 40
	"MAYORIGUAL"  reduce 40
	"IGUAL"  reduce 40
	"DISTINTO"  reduce 40
	"AND"  reduce 40
	"OR"  reduce 40
	')'  reduce 40
	']'  reduce 40
	';'  reduce 40
	'='  reduce 40


state 66
	expresion : expresion . '+' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '/' expresion  (43)
	expresion : expresion . '*' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . '>' expresion  (46)
	expresion : expresion . "MENORIGUAL" expresion  (47)
	expresion : expresion . "MAYORIGUAL" expresion  (48)
	expresion : expresion . "IGUAL" expresion  (49)
	expresion : expresion . "DISTINTO" expresion  (50)
	expresion : expresion . "AND" expresion  (51)
	expresion : expresion . "OR" expresion  (52)
	expresion : '!' expresion .  (53)
	expresion : expresion . '[' expresion ']'  (56)
	expresion : expresion . '.' "IDENT"  (57)

	.  reduce 53


state 67
	sentencia : "IDENT" '(' . valoresOpt ')' ';'  (36)
	expresion : "IDENT" '(' . valoresOpt ')'  (58)
	valoresOpt : .  (60)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	')'  reduce 60

	expresion  goto 93
	valoresOpt  goto 94
	valores  goto 95


state 68
	expresion : expresion . '+' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '/' expresion  (43)
	expresion : expresion . '*' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . '>' expresion  (46)
	expresion : expresion . "MENORIGUAL" expresion  (47)
	expresion : expresion . "MAYORIGUAL" expresion  (48)
	expresion : expresion . "IGUAL" expresion  (49)
	expresion : expresion . "DISTINTO" expresion  (50)
	expresion : expresion . "AND" expresion  (51)
	expresion : expresion . "OR" expresion  (52)
	expresion : '(' expresion . ')'  (55)
	expresion : expresion . '[' expresion ']'  (56)
	expresion : expresion . '.' "IDENT"  (57)

	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'<'  shift 80
	'>'  shift 81
	'['  shift 82
	'.'  shift 83
	"MENORIGUAL"  shift 84
	"MAYORIGUAL"  shift 85
	"IGUAL"  shift 86
	"DISTINTO"  shift 87
	"AND"  shift 88
	"OR"  shift 89
	')'  shift 96
	.  error


state 69
	sentencia : "READ" expresion . ';'  (28)
	expresion : expresion . '+' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '/' expresion  (43)
	expresion : expresion . '*' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . '>' expresion  (46)
	expresion : expresion . "MENORIGUAL" expresion  (47)
	expresion : expresion . "MAYORIGUAL" expresion  (48)
	expresion : expresion . "IGUAL" expresion  (49)
	expresion : expresion . "DISTINTO" expresion  (50)
	expresion : expresion . "AND" expresion  (51)
	expresion : expresion . "OR" expresion  (52)
	expresion : expresion . '[' expresion ']'  (56)
	expresion : expresion . '.' "IDENT"  (57)

	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'<'  shift 80
	'>'  shift 81
	'['  shift 82
	'.'  shift 83
	"MENORIGUAL"  shift 84
	"MAYORIGUAL"  shift 85
	"IGUAL"  shift 86
	"DISTINTO"  shift 87
	"AND"  shift 88
	"OR"  shift 89
	';'  shift 97
	.  error


state 70
	sentencia : "PRINT" expresion . ';'  (29)
	expresion : expresion . '+' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '/' expresion  (43)
	expresion : expresion . '*' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . '>' expresion  (46)
	expresion : expresion . "MENORIGUAL" expresion  (47)
	expresion : expresion . "MAYORIGUAL" expresion  (48)
	expresion : expresion . "IGUAL" expresion  (49)
	expresion : expresion . "DISTINTO" expresion  (50)
	expresion : expresion . "AND" expresion  (51)
	expresion : expresion . "OR" expresion  (52)
	expresion : expresion . '[' expresion ']'  (56)
	expresion : expresion . '.' "IDENT"  (57)

	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'<'  shift 80
	'>'  shift 81
	'['  shift 82
	'.'  shift 83
	"MENORIGUAL"  shift 84
	"MAYORIGUAL"  shift 85
	"IGUAL"  shift 86
	"DISTINTO"  shift 87
	"AND"  shift 88
	"OR"  shift 89
	';'  shift 98
	.  error


state 71
	sentencia : "WHILE" '(' . expresion ')' '{' sentencias '}'  (30)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 99


state 72
	sentencia : "IF" '(' . expresion ')' '{' sentencias '}'  (31)
	sentencia : "IF" '(' . expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (32)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 100


state 73
	sentencia : "RETURN" ';' .  (35)

	.  reduce 35


state 74
	sentencia : "RETURN" expresion . ';'  (34)
	expresion : expresion . '+' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '/' expresion  (43)
	expresion : expresion . '*' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . '>' expresion  (46)
	expresion : expresion . "MENORIGUAL" expresion  (47)
	expresion : expresion . "MAYORIGUAL" expresion  (48)
	expresion : expresion . "IGUAL" expresion  (49)
	expresion : expresion . "DISTINTO" expresion  (50)
	expresion : expresion . "AND" expresion  (51)
	expresion : expresion . "OR" expresion  (52)
	expresion : expresion . '[' expresion ']'  (56)
	expresion : expresion . '.' "IDENT"  (57)

	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'<'  shift 80
	'>'  shift 81
	'['  shift 82
	'.'  shift 83
	"MENORIGUAL"  shift 84
	"MAYORIGUAL"  shift 85
	"IGUAL"  shift 86
	"DISTINTO"  shift 87
	"AND"  shift 88
	"OR"  shift 89
	';'  shift 101
	.  error


state 75
	expresion : "CAST" '<' . tipo '>' '(' expresion ')'  (54)

	'['  shift 23
	"IDENT"  shift 24
	"INT"  shift 25
	"REAL"  shift 26
	"CHAR"  shift 27
	"VOID"  shift 28
	.  error

	tipo  goto 102


state 76
	expresion : expresion '+' . expresion  (41)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 103


state 77
	expresion : expresion '-' . expresion  (42)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 104


state 78
	expresion : expresion '*' . expresion  (44)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 105


state 79
	expresion : expresion '/' . expresion  (43)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 106


state 80
	expresion : expresion '<' . expresion  (45)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 107


state 81
	expresion : expresion '>' . expresion  (46)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 108


state 82
	expresion : expresion '[' . expresion ']'  (56)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 109


state 83
	expresion : expresion '.' . "IDENT"  (57)

	"IDENT"  shift 110
	.  error


state 84
	expresion : expresion "MENORIGUAL" . expresion  (47)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 111


state 85
	expresion : expresion "MAYORIGUAL" . expresion  (48)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 112


state 86
	expresion : expresion "IGUAL" . expresion  (49)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 113


state 87
	expresion : expresion "DISTINTO" . expresion  (50)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 114


state 88
	expresion : expresion "AND" . expresion  (51)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 115


state 89
	expresion : expresion "OR" . expresion  (52)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 116


state 90
	sentencia : expresion '=' . expresion ';'  (33)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expresion  goto 117


state 91
	funcion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' atributos sentencias '}' .  (7)

	.  reduce 7


state 92
	expresion : "IDENT" '(' . valoresOpt ')'  (58)
	valoresOpt : .  (60)

	'!'  shift 49
	"IDENT"  shift 65
	'('  shift 51
	"LITERALINT"  shift 53
	"LITERALREAL"  shift 59
	"LITERALCHAR"  shift 60
	"CAST"  shift 61
	')'  reduce 60

	expresion  goto 93
	valoresOpt  goto 118
	valores  goto 95


state 93
	expresion : expresion . '+' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '/' expresion  (43)
	expresion : expresion . '*' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . '>' expresion  (46)
	expresion : expresion . "MENORIGUAL" expresion  (47)
	expresion : expresion . "MAYORIGUAL" expresion  (48)
	expresion : expresion . "IGUAL" expresion  (49)
	expresion : expresion . "DISTINTO" expresion  (50)
	expresion : expresion . "AND" expresion  (51)
	expresion : expresion . "OR" expresion  (52)
	expresion : expresion . '[' expresion ']'  (56)
	expresion : expresion . '.' "IDENT"  (57)
	valores : expresion .  (61)

	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'<'  shift 80
	'>'  shift 81
	'['  shift 82
	'.'  shift 83
	"MENORIGUAL"  shift 84
	"MAYORIGUAL"  shift 85
	"IGUAL"  shift 86
	"DISTINTO"  shift 87
	"AND"  shift 88
	"OR"  shift 89
	','  reduce 61
	')'  reduce 61


state 94
	sentencia : "IDENT" '(' valoresOpt . ')' ';'  (36)
	expresion : "IDENT" '(' valoresOpt . ')'  (58)

	')'  shift 119
	.  error


state 95
	valoresOpt : valores .  (59)
	valores : valores . ',' expresion  (62)

	','  shift 120
	')'  reduce 59


state 96
	expresion : '(' expresion ')' .  (55)

	.  reduce 55


state 97
	sentencia : "READ" expresion ';' .  (28)

	.  reduce 28


state 98
	sentencia : "PRINT" expresion ';' .  (29)

	.  reduce 29


state 99
	sentencia : "WHILE" '(' expresion . ')' '{' sentencias '}'  (30)
	expresion : expresion . '+' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '/' expresion  (43)
	expresion : expresion . '*' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . '>' expresion  (46)
	expresion : expresion . "MENORIGUAL" expresion  (47)
	expresion : expresion . "MAYORIGUAL" expresion  (48)
	expresion : expresion . "IGUAL" expresion  (49)
	expresion : expresion . "DISTINTO" expresion  (50)
	expresion : expresion . "AND" expresion  (51)
	expresion : expresion . "OR" expresion  (52)
	expresion : expresion . '[' expresion ']'  (56)
	expresion : expresion . '.' "IDENT"  (57)

	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'<'  shift 80
	'>'  shift 81
	'['  shift 82
	'.'  shift 83
	"MENORIGUAL"  shift 84
	"MAYORIGUAL"  shift 85
	"IGUAL"  shift 86
	"DISTINTO"  shift 87
	"AND"  shift 88
	"OR"  shift 89
	')'  shift 121
	.  error


state 100
	sentencia : "IF" '(' expresion . ')' '{' sentencias '}'  (31)
	sentencia : "IF" '(' expresion . ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (32)
	expresion : expresion . '+' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '/' expresion  (43)
	expresion : expresion . '*' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . '>' expresion  (46)
	expresion : expresion . "MENORIGUAL" expresion  (47)
	expresion : expresion . "MAYORIGUAL" expresion  (48)
	expresion : expresion . "IGUAL" expresion  (49)
	expresion : expresion . "DISTINTO" expresion  (50)
	expresion : expresion . "AND" expresion  (51)
	expresion : expresion . "OR" expresion  (52)
	expresion : expresion . '[' expresion ']'  (56)
	expresion : expresion . '.' "IDENT"  (57)

	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'<'  shift 80
	'>'  shift 81
	'['  shift 82
	'.'  shift 83
	"MENORIGUAL"  shift 84
	"MAYORIGUAL"  shift 85
	"IGUAL"  shift 86
	"DISTINTO"  shift 87
	"AND"  shift 88
	"OR"  shift 89
	')'  shift 122
	.  error


state 101
	sentencia : "RETURN" expresion ';' .  (34)

	.  reduce 34


state 102
	expresion : "CAST" '<' tipo . '>' '(' expresion ')'  (54)

	'>'  shift 123
	.  error


state 103
	expresion : expresion . '+' expresion  (41)
	expresion : expresion '+' expresion .  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '/' expresion  (43)
	expresion : expresion . '*' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . '>' expresion  (46)
	expresion : expresion . "MENORIGUAL" expresion  (47)
	expresion : expresion . "MAYORIGUAL" expresion  (48)
	expresion : expresion . "IGUAL" expresion  (49)
	expresion : expresion . "DISTINTO" expresion  (50)
	expresion : expresion . "AND" expresion  (51)
	expresion : expresion . "OR" expresion  (52)
	expresion : expresion . '[' expresion ']'  (56)
	expresion : expresion . '.' "IDENT"  (57)
